--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -40,13 +40,18 @@
 
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <title>SNKR ALRT</title>
+    <script scr="phonegap.js"></script>
+    <script src="cdv-plugin-fb-connect.js"></script> 
+    <script src="facebook-js-sdk.js"></script> 
 </head>
 
 <body>
     <div class="app">
         <div id="deviceready" class="blink">
             <p class="event listening">Connecting to Device</p>
-            <p class="event received">Device is Ready</p>
+            <p class="event received">
+            <a target="_blank" href="#" onclick="login()" style="text-decoration: none"><button>Login using Facebook</button></a>
+            </p>
         </div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
